# my-cpp-app

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
src/: main.cpp
tests/: test.cpp
